# odamex

./: CMakeLists.txt
client/: CMakeLists.txt
client/sdl/: i_system.cpp
client/src/: d_main.cpp  g_game.cpp
common/: doomstat.h
tests/: CMakeLists.txt  odatests.py
